Styled chat session. Have association in user tag. User can leave group sessions, although there is a bug with leaving public sessions which is puzzling.

--- a/browser/scss/directives/_main.scss
+++ b/browser/scss/directives/_main.scss
@@ -12,3 +12,4 @@
 @import 'messaging/main.scss';
 @import 'search-options/main.scss';
 @import 'active-chat-panel/main.scss';
+@import 'chat-contact-tile/main.scss';
