--- a/browser/scss/directives/active-chat-panel/main.scss
+++ b/browser/scss/directives/active-chat-panel/main.scss
@@ -34,36 +34,69 @@
 }
 
 .sqn-btn-small {
-  border: 1px solid $theme-tacgrey;
-  color: $theme-tacgrey;
-  font-size: 0.8em;
-  background-color: rgba(0,0,0,0.9);
+  border: 3px solid $theme-red;
+  color: $theme-red;
+  font-size: 1em;
   outline: none;
-  border-bottom: none;
+  background-color: transparent;
+  cursor: pointer;
   &:hover {
     color: $theme-grey;
     background-color: $theme-tacgrey;
   }
 }
 
+.missed-msg-counter {
+  position: relative;
+  border-radius: 100%;
+  background-color: $theme-red;
+  height: 3rem;
+  width: 3rem;
+  float: right;
+  margin: 0em 0.5em 0em 0em;
+}
+
+.missed-msg-content {
+  position: absolute;
+  top: 52.5%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .tile-content {
   width: 100%;
   height: auto;
-  cursor: pointer;
   z-index: 850;
   color: $theme-tacgrey;
-  align-items: stretch;
+  align-items: center;
   text-decoration: none;
   @include transition-mixin(all 0.25s ease-in-out);
   border-bottom: 1px solid $theme-tacgrey;
   &:hover {
     color: $theme-grey;
     background-color: $theme-tacgrey;
+    .tile-association {
+      background-color: $theme-tacgrey;
+      color: $theme-grey;
+    }
   }
   &:active {
 
   }
 
+  p {
+    margin: 0;
+    width: 60%;
+    padding: 1rem;
+    cursor: pointer;
+  }
+
+
+}
+
+.tile-options {
+  width: 40%;
+  padding: 1rem;
 }
 
 .group-tile {
@@ -101,20 +134,51 @@
 
 active-chat-panel {
   position: fixed;
+  display: block;
   top: 3.5em;
-  height: calc(100vh - 3.5em);
+  height: calc(100% - 3.5em);
   background-color: rgba(0,0,0,0.9);
   box-shadow: -5px 0px 1em $theme-transparent-black;
   z-index: 800;
   padding: 1em;
   @include transition-mixin(transform 0.33s ease-in-out);
-  .sqn-btn {
-    padding: 0.25em;
-  }
+}
 
-  .active-chat-holder {
-    @include scrollable-content-viewer;
-    display: block;
-  }
+.active-chat-holder {
+  position: relative;
+  @include scrollable-content-viewer;
+  display: block;
+  border: 3px solid $theme-tacgrey;
+  height: auto;
+}
 
+.chat-menu-selector {
+  width: 33%;
+  background-color: transparent;
+  padding: 1em;
+  color: $theme-tacgrey;
+  &:hover {
+    background-color: $theme-tacgrey;
+    color: $theme-grey;
+  }
+}
+
+.chat-menu-selector-active {
+  background-color: $theme-tacgrey;
+  color: $theme-grey;
+  border: 3px solid $theme-tacgrey;
+}
+
+.active-chat-redirect {
+  background-color: $theme-tacgrey;
+  padding: 1em;
+  color: $theme-grey;
+  flex-grow: 1;
+  padding: 0.25em;
+  border: 3px solid $theme-tacgrey;
+  margin: 0 0 1rem 0;
+  &:active {
+    background-color: transparent;
+    color: $theme-tacgrey;
+  }
 }
