Finished platform stats.

--- a/browser/scss/directives/dashboard-event-panel/main.scss
+++ b/browser/scss/directives/dashboard-event-panel/main.scss
@@ -1,4 +1,4 @@
-dashboard-event-panel {
+dashboard-event-panel, dashboard-platform-panel {
   @include theme-shadow-default;
   margin: 0.5em;
   padding: 1em;
