--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -25,7 +25,7 @@
       <section class="state-transition-view">
         <h1>"Keitou Kalawaca Na Wasaliwa"</h1>
         <div class="transition-squadron">
-          <h3>Just like waiting for the radio operator, should be ready soon...</h3>
+          <h3>Loading...</h3>
         </div>
       </section>
     </div>
