--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -14,6 +14,19 @@
   }
 }
 
+@keyframes  fade-in-from-bottom {
+  0% {
+    opacity: 1;
+    transform: translateY(1em)
+  }
+
+  100% {
+    transform: translateY(0em){
+      opacity: 1;
+    }
+  }
+}
+
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
 }
