--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -181,6 +181,9 @@ p.home-title-text, h3.home-title-text {
   text-align: left;
   padding: 1em;
   color: $theme-tacgrey;
+  strong {
+    color: $theme-blue;
+  }
 }
 
 .background-media {
@@ -197,7 +200,7 @@ video.background-media {
 }
 
 .orion-blurb {
-  @include background-img-settings($theme-grey, "/images/home/NZP3K2002.jpg", center);
+  @include background-img-settings($theme-grey, "/images/home/NZP3K2002-dark.png", center);
 }
 
 .people-blurb {
@@ -244,6 +247,15 @@ video.background-media {
 .home-event:nth-child(odd) {
   background-color: $theme-blue;
   color: $theme-tacgrey;
+}
+
+.home-register {
+  color: $theme-blue;
+  font-weight: 900;
+  &:hover, &:active {
+    background-color: $theme-blue;
+    color: $theme-tacgrey;
+  }
 }
 
 .home-footer {
