--- a/browser/scss/messaging/main.scss
+++ b/browser/scss/messaging/main.scss
@@ -109,6 +109,7 @@
   border: 3px solid $theme-grey;
   padding: 0;
   height: 90vh;
+  @include scrollable-content-viewer;
 }
 
 .session-chat {
@@ -245,6 +246,10 @@ chat-message-output {
       }
     }
   }
+}
+
+.messaging-search-results {
+
 }
 
 .tile-association {
