--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -415,10 +415,6 @@ formatted-text {
   color: $theme-grey;
 }
 
-.shop-storefront {
-  padding: 5em;
-}  
-
 @import 'directives/main';
 @import 'home/main';
 @import 'login/main';
@@ -430,3 +426,4 @@ formatted-text {
 @import 'management-announcements/main';
 @import 'management-users/main';
 @import 'messaging/main';
+@import 'shop/main';
