Have basic variant adding working. Now need to work on quantity, then styling.

--- a/browser/scss/shop/main.scss
+++ b/browser/scss/shop/main.scss
@@ -45,7 +45,11 @@ shop-cart {
 }
 
 cart-product {
+  background-color: $theme-blue;
   flex-grow: 1;
+  display: block;
+  margin: 1em;
+  padding: 1em;
   li {
     list-style-type: none;
   }
