Working on further styling. Can increment and decrement quantities of items in cart. Now to finish styling and notifications.

--- a/browser/scss/shop/main.scss
+++ b/browser/scss/shop/main.scss
@@ -112,4 +112,19 @@ cart-product {
   li {
     list-style-type: none;
   }
+  div.flex-container-row {
+    justify-content: space-between;
+    h4 {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.cart-product-variant {
+  padding: 0.25em;
+  margin: 0.25em;
+}
+
+.item-quantity-btn {
+  margin: 0 0 0 0.5em;
 }
