Switching to new branch, on testing, have realised there is one major issue with Shopify concerning checkout and shipping. Will have to homebrew this.

--- a/browser/scss/shop/main.scss
+++ b/browser/scss/shop/main.scss
@@ -77,6 +77,14 @@ shop-cart {
   }
 }
 
+.product-image {
+  img {
+    display: block;
+    position: relative;
+    margin: 0 auto;
+  }
+}
+
 .product-option-selected {
   background-color: $theme-green;
   border-color: $theme-green;
@@ -127,4 +135,17 @@ cart-product {
 
 .item-quantity-btn {
   margin: 0 0 0 0.5em;
+}
+
+.cart-stats, cart-options {
+  flex-grow: 1;
+}
+
+.cart-stats {
+  font-size: 1.2em;
+}
+
+.stats-separator {
+  padding: 0 0.5em 0 0;
+  border-right: 3px solid $theme-tacgrey;
 }
