Updated gulpfile to resolve HTML build issue. Added new directive for adding options to a product.

--- a/browser/scss/management-shop/main.scss
+++ b/browser/scss/management-shop/main.scss
@@ -3,7 +3,19 @@
   color: $theme-grey;
 }
 
+.new-product-table {
+  display: block;
+  position: relative;
+  height: auto;
+  width: 90%;
+}
 
+product-options {
+  display: table;
+  input {
+    display: inline-table;
+  }
+}
 
 .new-product-form {
   label, input[type="text"], input[type="file"] {
