--- a/browser/scss/management-shop/main.scss
+++ b/browser/scss/management-shop/main.scss
@@ -22,6 +22,64 @@ product-options {
   }
 }
 
+.table-row-full {
+  width: 100%;
+}
+
+.variant-form-table {
+  margin-bottom: 0.5em;
+}
+
+.upload-progress-holder {
+  box-shadow: 0px 5px 10px $theme-grey inset;
+  height: 1em;
+}
+
+.upload-progress {
+  background-color: $theme-green;
+  height: 1em;
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.product-image-holder {
+  height: auto;
+  @include theme-shadow-default;
+}
+
+.product-image-info {
+
+}
+
+.product-thumbnail {
+  height: 5em;
+  width: auto;
+}
+
+.upload-status-output {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: 300;
+  top: 0;
+  left: 0;
+  background-color: $theme-blue;
+  color: $theme-tacgrey;
+
+  span {
+    position: relative;
+    display: block;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 25%;
+    width: 50%;
+    border: 3px solid white;
+    padding: 6px;
+  }
+}
+
 .new-product-form {
   label, input[type="file"] {
     display: block;
