Have removal of image properties and from product and variant and removal of the image in total from the server working.

--- a/browser/scss/management-shop/main.scss
+++ b/browser/scss/management-shop/main.scss
@@ -90,6 +90,14 @@ product-options {
   }
 }
 
+.table-responsive {
+  padding-bottom: 1em;
+}
+
+.variant-image-name {
+  margin: 0 2em 0 0;
+}
+
 .new-product-form {
   label, input[type="file"] {
     display: block;
