--- a/browser/scss/management-shop/main.scss
+++ b/browser/scss/management-shop/main.scss
@@ -107,6 +107,12 @@ product-options {
     color: $theme-tacgrey;
   }
 
+  input[type="file"] {
+    border: 3px solid $theme-grey;
+    margin: 1em auto;
+    padding: 1em;
+  }
+
   textarea {
     width: 90%;
     height: 7.5em;
