Updated shop management states UI. Used some methods in shop front.

--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -428,7 +428,7 @@ formatted-text {
 }
 
 .product-image {
-  height: 100%;
+  height: 15em;
   width: auto;
   display: block;
   position: relative;
