--- a/browser/scss/management-shop/main.scss
+++ b/browser/scss/management-shop/main.scss
@@ -60,6 +60,8 @@ product-options {
   height: auto;
   @include theme-shadow-default;
   padding: 1em;
+  position: relative;
+  display: block;
 }
 
 .product-image-info {
@@ -67,9 +69,11 @@ product-options {
 }
 
 .product-thumbnail {
-  height: auto;
-  width: 33%;
-  margin: 0 0 0 33%;
+  position: relative;
+  display: block;
+  height: 15em;
+  width: auto;
+  margin: 0.5em auto;
 }
 
 .upload-panel {
