Updating styling for adding and modifying a product before testing product with variants.

--- a/browser/scss/management-shop/main.scss
+++ b/browser/scss/management-shop/main.scss
@@ -110,6 +110,12 @@ product-options {
   margin: 0 2em 0 0;
 }
 
+.product-management-header {
+  color: #EFEFEF;
+  background-color: #68AFC3;
+  padding: 0.5em;
+}
+
 .new-product-form {
   .field-label {
     display: block;
